# cring

./: PKGBUILD  Pipfile  cring  pychess  pyproject.toml
cring/: main.py
tests/: test_cring.py
