[tool.poetry]
name = "cring"
version = "0.1.0"
description = ""
authors = ["theoremoon <theoldmoon0602@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pygobject = "^3.34"
pynput = "^1.4"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
